[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Weapons/Weapon.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Weapons/MuzzleFlash.tscn" type="PackedScene" id=3]

[node name="Weapon" type="Spatial"]
script = ExtResource( 1 )

[node name="Muzzle" type="Position3D" parent="."]

[node name="MuzzleFlash" parent="Muzzle" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 3, 0, 0, -0.3 )

[node name="RecoilResetTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="RecoilResetTimer" to="." method="_on_RecoilResetTimer_timeout"]
